# 42

amazing/: Makefile  a_maze_ing.py  config.txt  maze.txt  pyproject.toml
amazing/mazegen/: __init__.py  cell.py  config.py  constants.py  exceptions.py  exporter.py  generator.py  maze.py  renderer_ascii.py  solver.py
lpy3/ex0/: ft_command_quest.py
lpy3/ex1/: ft_score_analytics.py
lpy3/ex2/: ft_coordinate_system.py
lpy3/ex3/: ft_achievement_tracker.py
lpy3/ex4/: ft_inventory_system.py
lpy4/: sample_data.json
lpy4/ex1/: ft_archive_creation.py
pmodule2/ex1/: ft_first_exception.py
pmodule2/ex2/: ft_custom_errors.py
pmodule2/ex3/: ft_finally_block.py
py2/ex0/: ft_first_exception.py
py2/ex1/: ft_different_errors.py
py2/ex3/: ft_custom_errors.py
py2/ex4/: ft_finally_block.py
